2008-04-10  Bruno Haible  <bruno@clisp.org>

	* INSTALL (Multiple Architectures): Recommend to use
	--disable-dependency-tracking.
	Suggested by Peter O'Gorman <peter@pogma.com>.

2008-04-10  Bruno Haible  <bruno@clisp.org>

	Replace HAVE_INLINE in installed include files.
	* lib/unistring-inline.h: New file.
	* lib/unistring-notinline.h: New file.
	* autogen.sh: Postprocess unistr.h.
	* gnulib-local/lib/unistr.h.diff: Also include unistring-inline.h.
	* lib/Makefile.am (include_HEADERS): Add unistring-inline.h.
	(noinst_HEADERS): New variable.
	(AM_CPPFLAGS): Define IN_LIBUNISTRING.

2008-04-10  Bruno Haible  <bruno@clisp.org>

	Provide installable <stdbool.h>, <stdint.h> replacements.
	* autogen.sh: Pass --local-dir option to gnulib-tool.
	* configure.ac (AC_CONFIG_FILES): Add gnulib-local/Makefile.
	* Makefile.am (SUBDIRS): Add gnulib-local.
	* gnulib-local/Makefile.am: New file.
	* gnulib-local/lib/unitypes.h.diff: New file.
	* gnulib-local/lib/unistr.h.diff: New file.
	* gnulib-local/lib/unictype.h.diff: New file.
	* gnulib-local/lib/unicase.h.diff: New file.
	* lib/stdint.mini.h: New file, a reduced version of gnulib's
	lib/stdint.in.h.
	* lib/Makefile.am (nodist_include_HEADERS): New variable.
	(unistring-stdbool.h, unistring-stdint.h): New rules.
	(BUILT_SOURCES, MOSTLYCLEANFILES, CLEANFILES): Update accordingly.
	(EXTRA_DIST): Add stdint.mini.h.

2008-04-09  Bruno Haible  <bruno@clisp.org>

	Build and install documentation.
	* autogen.sh: Fetch a recent copy of texinfo.tex.
	* configure.ac (TEXI2DVI, DVIPS, PERL): New substituted variables.
	(AC_CONFIG_FILES): Add doc/Makefile.
	* m4/fixautomake.m4: New file, from GNU gettext.
	* Makefile.am (SUBDIRS): Add doc.
	(EXTRA_DIST): Add build-aux/texi2html.
	* doc/Makefile.am: New file.
	* doc/libunistring.texi: Set document encoding to UTF-8.
	(arrow): Add a fallback definition for texi2html.

	Put the table of contents at the beginning, not at the end.
	* build-aux/texi2html (INLINE_CONTENTS): Set to 1.